@@ -1,3 +1,13 @@
+2005-06-18  Daniel Steffen  <das@users.sourceforge.net>
+
+	* macosx/Makefile: for X11 build, add -X11 suffix to unversioned wish
+	symbolic link.
+
+	* unix/tcl.m4 (Darwin): add -headerpad_max_install_names to LDFLAGS to
+	ensure we can always relocate binaries with install_name_tool.
+
+	* unix/configure: autoconf-2.59
+
 2005-06-07  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>
 
 	Bump patchlevel to a4 to distinguish from a3 release.
